@@ -69,6 +69,7 @@
     + php_sessions table doesn't exist error when upgrading (#3417);
     + Changelog data too long for column errors (#3376,#3398);
     + RFC 6265 compliant cookies (#3452);
+    + Require unique subnets not working as intended (#3529);
     + API:
         + Fixed /user/ calls for SSL with app code (static app code);
         + Address IP field not displayed when using filter_by (#2934);
